Change history
==============

2.1dev (unreleased)
------------------

- Fixed permission bug that affected unpublished Carousel folders.
  [yomatters]

- Fixed Carousel banner lookup so that banner view permissions are respected.
  [yomatters]

- Fixed a bug that affected folders containing an item with the ID 'carousel'
  that was not a Carousel folder.
  [yomatters]

2.1b2 (2010-12-08)
------------------

- Fixed javascript error on Plone 3.
  [yomatters]

2.1b1 (2010-12-06)
------------------

- Fixed known good versions set link.
  [yomatters]

- Made instructions for adding and modifying banners more prominent.
  [yomatters]

- Added option for setting the ID of the Carousel.
  [yomatters]

2.0 (2010-11-19)
----------------

- Split plugin into functions, making it easier to override parts of the
  Carousel behavior.
  [yomatters]

2.0b1 (2010-09-30)
------------------

- Added slide as a possible transition type.
  [yomatters]

- Refactored javascript as a jQuery plugin that triggers jQuery events on
  transitions.
  [yomatters]

- Added settings to customize the appearance of the banner and pager and the
  length and type of transition.
  [yomatters]

- Added an optional pager for navigation among banners.
  [yomatters]
  
- Replaced description field on Carousel banners with a rich-text body field.   
  [yomatters]

- Remove the browser layer to help with use in Plone 2.5.
  [davisagli]

1.1 (2010-03-26)
----------------

- In Plone 4, add viewlet to the abovecontent viewlet manager by default, to
  avoid weird styles.
  [davisagli]

- Added Spanish translation.
  [tzicatl]

- Only show published banners in the Carousel, even for users who have
  permission to see others.
  [davisagli]

1.0 (2009-03-31)
----------------

- Changed behavior of text links to swap banner on mouseover.
  [davisagli]


1.0b3 (2009-02-07)
------------------

- Add 'Carousel Banner' to types not searched.
  [davisagli]
